--- a/backend/package.json
+++ b/backend/package.json
@@ -19,21 +19,22 @@
     "author": "Swasthya Vaani Team",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^8.0.3",
+        "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
         "helmet": "^7.1.0",
-        "express-rate-limit": "^7.1.5",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.0.3",
         "morgan": "^1.10.0",
-        "compression": "^1.7.4"
+        "twilio": "^4.23.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2",
         "jest": "^29.7.0",
+        "nodemon": "^3.0.2",
         "supertest": "^6.3.3"
     }
 }
