--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-VITE_API_URL=http://10.0.2.2:5000/api
+# Development (local)
+#VITE_API_URL=http://192.168.X.X:5000/api
+#VITE_APP_NAME=Swasthya Vaani
+#VITE_ENABLE_LOGS=true
+
+# Production (Vercel or any hosted backend)
+# Uncomment and set this when building for production
+ VITE_API_URL=https://swasthyavaani-app.vercel.app/api
+VITE_APP_NAME=Swasthya Vaani
+ VITE_ENABLE_LOGS=false
