--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "android": "npm run build && npx cap sync android",
+    "android:open": "npx cap open android",
+    "android:run": "npm run build && npx cap sync android && npx cap run android",
+    "ios": "npm run build && npx cap sync ios",
+    "ios:open": "npx cap open ios",
+    "sync": "npx cap sync"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
