--- a/backend/env.example
+++ b/backend/env.example
@@ -21,3 +21,6 @@ RATE_LIMIT_MAX_REQUESTS=100
 TWILIO_ACCOUNT_SID=your_account_sid
 TWILIO_AUTH_TOKEN=your_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
+
+# Gemini AI Configuration (for medicine information)
+GEMINI_API_KEY=your_gemini_api_key_here
