--- a/backend/env.example
+++ b/backend/env.example
@@ -24,3 +24,7 @@ TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
 # Gemini AI Configuration (for medicine information)
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# OCR.space API Configuration (optional - uses free tier by default)
+# Get your free API key from https://ocr.space/ocrapi/freekey
+OCR_SPACE_API_KEY=helloworld
